--- a/07-MediaQuery/p2.html
+++ b/07-MediaQuery/p2.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="./assets/images/logo.jpg" alt="">
+            <img src="assets/images/logo.jpeg" alt="">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT US</a></li>
