--- a/09-Grid/Assignment/p1.html
+++ b/09-Grid/Assignment/p1.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <section id="entire_background"><!--The property applied will affect only parent and child not the grand parent-->
-<header>
+    <header>
     <div>
     <h1>Company <span>Name</span></h1><br>
     <b> Your Slogan here</b>
     </div>
-    <!-- using flex -->
+    <!--using grid  -->
     <nav>
   <a href="">HOME</a>   
   <a href="products">PRODUCTS</a>
@@ -34,7 +34,7 @@
 <section id="sect2">
     <div id="b1">  
         <h2>Vestibulum</h2>
-        <p>Lorem ipsum  <br> reprehenderit aut s<br> culpa <span>Pariatu</span> sdsPariatur eos <br>veniam repellendus  .<br> Autem deserunt inventore iste <br>Lorem ipsum dolor, sit amet consect<span>dolores...</span><br></p>
+        <p>Lorem ipsum  <br> reprehenderit aut s<br> culpa <span>Pariatu</span> sdsPariatur eos <br>veniam repellendus  .<br> Autem deserunt inventore iste <span>dolores...</span><br></p>
         <button id="btn">more</button>
     </div> 
     <div id="b2">  
